@@ -63,15 +63,15 @@ E5=$(tempfile)
 PORT=$((9999 + $$))
 PORT2=$((9998 + $$))
 
-knxd -n K1 -B log -t 0xffff -f 9 -e 4.1.0 -E 4.1.1:5 -c -u$S1 --multi-port -DTR --Server=224.99.98.97:$PORT -bdummy: &
+knxd -n K1 -B log -t 0xffff -f 9 -e 4.1.0 -E 4.1.1:5 -c -u$S1 --multi-port -D -R -B queue -T --Server=224.99.98.97:$PORT -bdummy: &
 KNX1=$!
 trap 'echo T1; rm -f $L1 $L2 $E1 $E2 $EF; kill $KNX1; wait' 0 1 2
 
 sleep 2
-knxd -n K2 -B log -t 0xffff -f 9 -e 4.2.0 -E 4.2.1:5 -DTR --Server=:$PORT2 -u$S2 -b ip:224.99.98.97:$PORT &
+knxd -n K2 -B log -t 0xffff -f 9 -e 4.2.0 -E 4.2.1:5 -DTR --Server=:$PORT2 -u$S2 -B queue -b ip:224.99.98.97:$PORT &
 KNX2=$!
 sleep 2
-knxd -n K3 -B log -t 0xffff -f 9 -e 4.3.0 -E 4.3.1:5 -u$S3 -b ipt:localhost:$PORT2:$((10001 + $$)) &
+knxd -n K3 -B log -t 0xffff -f 9 -e 4.3.0 -E 4.3.1:5 -u$S3 -B queue -b ipt:localhost:$PORT2:$((10001 + $$)) &
 KNX3=$!
 #read RETURN
 trap 'echo T2; rm -f $L1 $L2 $E1 $E2 $EF; kill $KNX1 $KNX2 $KNX3; wait' 0 1 2
